// ============================================================
// Hoàng Nha Fashion — Schema 13 bảng (đã sửa theo góp ý ERD)
// MySQL/MariaDB trên XAMPP (root, không mật khẩu)
//
// Thay đổi so với bản 15 bảng trước:
//  1. Tên bảng thống nhất SỐ NHIỀU + snake_case (@@map): users, orders,
//     vouchers... — tên cột cũng snake_case (@map) cho chuẩn MySQL.
//  2. cart_items / order_items / reviews chỉ nối vào VARIANTS —
//     bỏ FK product_id thừa (đã suy ra được qua variants.product_id).
//  3. GỘP payments vào orders: quan hệ 1-1 (mỗi đơn đúng 1 lần thanh toán)
//     nên tách bảng chỉ tốn một lần JOIN, gộp lại không mất thông tin.
//  4. XÓA sepay_webhook_logs: chống trùng webhook bằng chính trạng thái
//     payment_status của đơn (đã paid thì bỏ qua), không cần bảng log.
// ============================================================

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

/* ============ 1. NGƯỜI DÙNG ============ */

model User {
  id            Int            @id @default(autoincrement())
  name          String
  email         String         @unique
  passwordHash  String         @map("password_hash")
  phone         String?
  avatar        String?
  gender        String?
  birthday      String?
  role          String         @default("CUSTOMER") // CUSTOMER | ADMIN
  createdAt     DateTime       @default(now()) @map("created_at")
  /**
   * Danh sách yêu thích: mảng product_id, vd [12, 7, 30].
   * Để Ở ĐÂY thay vì tạo bảng wishlist riêng — CSDL phải giữ đúng 13 bảng theo
   * ERD. Yêu thích chỉ là một tập id, không có thuộc tính riêng và không ai
   * truy vấn ngược "ai đang thích sản phẩm X", nên một cột JSON là đủ.
   */
  wishlist      Json?
  addresses     Address[]
  orders        Order[]
  reviews       Review[]
  cartItems     CartItem[]
  notifications Notification[]

  @@map("users")
}

/* ============ 2. SỔ ĐỊA CHỈ ============ */

model Address {
  id        Int     @id @default(autoincrement())
  userId    Int     @map("user_id")
  label     String
  name      String
  phone     String
  street    String
  ward      String
  city      String
  isDefault Boolean @default(false) @map("is_default")
  user      User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("addresses")
}

/* ============ 3. DANH MỤC ============ */

model Category {
  id       Int       @id @default(autoincrement())
  name     String
  slug     String    @unique
  image    String    @db.Text
  products Product[]

  @@map("categories")
}

/* ============ 4. SẢN PHẨM ============ */

model Product {
  id           Int            @id @default(autoincrement())
  categoryId   Int            @map("category_id")
  name         String
  slug         String         @unique
  description  String         @db.Text
  price        Int
  oldPrice     Int?           @map("old_price") // giá gạch ngang khi sale
  brand        String
  material     String
  rating       Float          @default(0) // trung bình đánh giá (phi chuẩn hóa)
  reviewCount  Int            @default(0) @map("review_count")
  sold         Int            @default(0)
  // Cờ phân loại — thay cho bảng Collection/Campaign/Tag
  isNew        Boolean        @default(false) @map("is_new")
  isBestSeller Boolean        @default(false) @map("is_best_seller")
  isTrending   Boolean        @default(false) @map("is_trending")
  flashSale    Boolean        @default(false) @map("flash_sale")
  createdAt    DateTime       @default(now()) @map("created_at")
  category     Category       @relation(fields: [categoryId], references: [id])
  images       ProductImage[]
  variants     Variant[]

  @@map("products")
}

/* ============ 5. ẢNH SẢN PHẨM ============ */

model ProductImage {
  id        Int     @id @default(autoincrement())
  productId Int     @map("product_id")
  url       String  @db.Text
  sortOrder Int     @default(0) @map("sort_order")
  product   Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@map("product_images")
}

/* ============ 6. BIẾN THỂ (màu × size × tồn kho) ============ */
// Variant là "đơn vị bán" duy nhất: cart_items, order_items, reviews
// đều CHỈ nối vào đây (product suy ra qua variants.product_id).

model Variant {
  id         Int         @id @default(autoincrement())
  productId  Int         @map("product_id")
  color      String
  colorHex   String      @map("color_hex")
  size       String
  stock      Int         @default(0)
  // Giá riêng cho biến thể (size XXL / màu limited). NULL = dùng giá sản phẩm.
  price      Int?
  oldPrice   Int?        @map("old_price")
  product    Product     @relation(fields: [productId], references: [id], onDelete: Cascade)
  cartItems  CartItem[]
  orderItems OrderItem[]
  reviews    Review[]

  @@unique([productId, color, size])
  @@map("variants")
}

/* ============ 7. GIỎ HÀNG ============ */
// Chỉ trỏ vào variants — product/màu/size/giá đều JOIN ra được, không lưu lặp.

model CartItem {
  id        Int     @id @default(autoincrement())
  userId    Int     @map("user_id")
  variantId Int     @map("variant_id")
  quantity  Int     @default(1)
  user      User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  variant   Variant @relation(fields: [variantId], references: [id], onDelete: Cascade)

  @@unique([userId, variantId])
  @@map("cart_items")
}

/* ============ 8. ĐƠN HÀNG (gộp vận đơn + THANH TOÁN) ============ */
// Payment gộp thẳng vào đây vì quan hệ 1-1: một đơn chỉ có 1 lần thanh toán
// và 1 lần thanh toán chỉ thuộc 1 đơn → tách bảng không thêm thông tin gì.

model Order {
  id              String         @id // HN-yymmdd-xxxx
  userId          Int            @map("user_id")
  voucherId       Int?           @map("voucher_id")
  // Máy trạng thái một chiều — định nghĩa ở backend/src/lib/orderStatus.ts:
  // pending → confirmed → preparing → shipping → delivered → returned
  // nhánh: (pending|confirmed|preparing) → cancelled · shipping → delivery_failed
  status          String         @default("pending")
  shippingMethod  String         @default("standard") @map("shipping_method")
  shippingFee     Int            @default(0) @map("shipping_fee")
  discount        Int            @default(0)
  subtotal        Int
  total           Int
  receiverName    String         @map("receiver_name")
  receiverPhone   String         @map("receiver_phone")
  receiverEmail   String         @map("receiver_email")
  addressText     String         @db.Text @map("address_text")
  note            String?        @db.Text
  // --- Thanh toán (gộp từ bảng payments cũ) ---
  paymentMethod   String         @map("payment_method") // cod | qr
  paymentStatus   String         @default("pending") @map("payment_status") // pending|paid|failed|refunded
  // Mã ghi trong nội dung chuyển khoản — NGẪU NHIÊN để không claim nhầm đơn.
  payCode         String?        @unique @map("pay_code")
  payExpiresAt    DateTime?      @map("pay_expires_at") // hạn QR (15 phút)
  paidAt          DateTime?      @map("paid_at")
  transactionCode String?        @map("transaction_code") // mã giao dịch SePay/manual
  // --- Vận đơn (gộp từ bảng Shipment cũ) ---
  shipCarrier     String?        @map("ship_carrier")
  trackingCode    String?        @map("tracking_code")
  shippedAt       DateTime?      @map("shipped_at")
  deliveredAt     DateTime?      @map("delivered_at")
  // --- Hủy đơn: lý do bắt buộc nhập, ai hủy, hủy lúc nào ---
  // Cả ba đều nullable vì đơn chưa hủy thì không có gì để điền, và đơn cũ
  // trong DB (hủy trước khi có tính năng này) cũng không có dữ liệu.
  cancelReason    String?        @db.Text @map("cancel_reason")
  cancelledBy     String?        @map("cancelled_by") // user | admin
  cancelledAt     DateTime?      @map("cancelled_at")
  createdAt       DateTime       @default(now()) @map("created_at")
  user            User           @relation(fields: [userId], references: [id])
  voucher         Voucher?       @relation(fields: [voucherId], references: [id])
  items           OrderItem[]
  notifications   Notification[]
  reviews         Review[]

  @@map("orders")
}

/* ============ 9. DÒNG ĐƠN HÀNG (snapshot giá) ============ */

model OrderItem {
  id        Int     @id @default(autoincrement())
  orderId   String  @map("order_id")
  variantId Int     @map("variant_id") // biến thể đã bán — hoàn kho chính xác khi hủy
  name      String // snapshot tên lúc mua
  price     Int // snapshot giá lúc mua
  quantity  Int
  // color/size là SNAPSHOT: admin có thể sửa variant sau này,
  // hóa đơn cũ phải in đúng như lúc khách mua.
  color     String
  size      String
  image     String  @db.Text
  order     Order   @relation(fields: [orderId], references: [id], onDelete: Cascade)
  variant   Variant @relation(fields: [variantId], references: [id])

  @@map("order_items")
}

/* ============ 10. VOUCHER ============ */
// "Mỗi khách 1 lần / mã" kiểm bằng truy vấn orders(user_id, voucher_id).

model Voucher {
  id            Int            @id @default(autoincrement())
  code          String         @unique
  type          String // percent | fixed | freeship
  value         Int
  description   String
  minOrder      Int            @default(0) @map("min_order")
  // Khoảng thời gian hiệu lực. `endDate` chính là cột `expiry` cũ được đổi tên
  // (dữ liệu giữ nguyên). Voucher chỉ dùng được khi startDate <= now <= endDate.
  startDate     DateTime       @default(now()) @map("start_date")
  endDate       DateTime       @map("end_date")
  usageLimit    Int            @default(1000) @map("usage_limit")
  usedCount     Int            @default(0) @map("used_count")
  orders        Order[]
  notifications Notification[]

  @@map("vouchers")
}

/* ============ 11. ĐÁNH GIÁ ============ */
// Chỉ nối vào variants: sản phẩm suy ra qua variants.product_id.

model Review {
  id         Int      @id @default(autoincrement())
  userId     Int      @map("user_id")
  variantId  Int      @map("variant_id") // biến thể khách đánh giá (màu/size nào)
  // Đơn hàng CHỨNG MINH khách đã mua. NULL = đánh giá cũ (có trước khi bắt
  // buộc mua mới được đánh giá) — không hiện badge "Đã mua hàng".
  // Cặp (order_id, variant_id) là UNIQUE: mỗi sản phẩm trên mỗi đơn chỉ
  // đánh giá được 1 lần. MySQL cho phép nhiều NULL trong unique index nên
  // các đánh giá cũ không bị đụng nhau.
  orderId    String?  @map("order_id")
  rating     Int
  title      String?
  content    String   @db.Text
  adminReply String?  @db.Text @map("admin_reply") // phản hồi của shop
  approved   Boolean  @default(false)
  createdAt  DateTime @default(now()) @map("created_at")
  user       User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  variant    Variant  @relation(fields: [variantId], references: [id], onDelete: Cascade)
  order      Order?   @relation(fields: [orderId], references: [id], onDelete: SetNull)

  @@unique([orderId, variantId])
  @@map("reviews")
}

/* ============ 12. THÔNG BÁO ============ */
//  - type = order → order_id (bấm vào nhảy thẳng tới đơn)
//  - type = promo → voucher_id (thông báo mã mới)
// Cả hai nullable vì thông báo hệ thống không thuộc đơn hay voucher nào.

model Notification {
  id        Int      @id @default(autoincrement())
  userId    Int      @map("user_id")
  orderId   String?  @map("order_id")
  voucherId Int?     @map("voucher_id")
  title     String
  content   String   @db.Text
  type      String   @default("system") // order | promo | system
  read      Boolean  @default(false)
  createdAt DateTime @default(now()) @map("created_at")
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  order     Order?   @relation(fields: [orderId], references: [id], onDelete: Cascade)
  voucher   Voucher? @relation(fields: [voucherId], references: [id], onDelete: SetNull)

  @@map("notifications")
}

/* ============ 13. BANNER (hero trang chủ) ============ */

model Banner {
  id        Int     @id @default(autoincrement())
  eyebrow   String
  title     String
  subtitle  String  @db.Text
  image     String  @db.Text
  cta       String  @default("Khám phá ngay")
  active    Boolean @default(true)
  sortOrder Int     @default(0) @map("sort_order")

  @@map("banners")
}
