// ==========================================================
// Hoàng Nha Fashion — ERD (DBML cho dbdiagram.io)
// Sinh tự động từ backend/prisma/schema.prisma — 13 bảng
// Dán toàn bộ file này vào https://dbdiagram.io/d
// ==========================================================

Table users {
  id int [pk, increment, not null]
  name varchar [not null]
  email varchar [unique, not null]
  password_hash varchar [not null]
  phone varchar [null]
  avatar varchar [null]
  gender varchar [null]
  birthday varchar [null]
  role varchar [not null, default: "CUSTOMER", note: 'CUSTOMER | ADMIN']
  created_at datetime [not null, default: `now()`]
}

Table addresses {
  id int [pk, increment, not null]
  user_id int [not null]
  label varchar [not null]
  name varchar [not null]
  phone varchar [not null]
  street varchar [not null]
  ward varchar [not null]
  city varchar [not null]
  is_default boolean [not null, default: false]
}

Table categories {
  id int [pk, increment, not null]
  name varchar [not null]
  slug varchar [unique, not null]
  image text [not null]
}

Table products {
  id int [pk, increment, not null]
  category_id int [not null]
  name varchar [not null]
  slug varchar [unique, not null]
  description text [not null]
  price int [not null]
  old_price int [null, note: 'giá gạch ngang khi sale']
  brand varchar [not null]
  material varchar [not null]
  rating float [not null, default: 0, note: 'trung bình đánh giá (phi chuẩn hóa)']
  review_count int [not null, default: 0]
  sold int [not null, default: 0]
  is_new boolean [not null, default: false]
  is_best_seller boolean [not null, default: false]
  is_trending boolean [not null, default: false]
  flash_sale boolean [not null, default: false]
  created_at datetime [not null, default: `now()`]
}

Table product_images {
  id int [pk, increment, not null]
  product_id int [not null]
  url text [not null]
  sort_order int [not null, default: 0]
}

Table variants {
  id int [pk, increment, not null]
  product_id int [not null]
  color varchar [not null]
  color_hex varchar [not null]
  size varchar [not null]
  stock int [not null, default: 0]
  price int [null]
  old_price int [null]
  indexes {
    (product_id, color, size) [unique]
  }
}

Table cart_items {
  id int [pk, increment, not null]
  user_id int [not null]
  variant_id int [not null]
  quantity int [not null, default: 1]
  indexes {
    (user_id, variant_id) [unique]
  }
}

Table orders {
  id varchar [pk, not null, note: 'HN-yymmdd-xxxx']
  user_id int [not null]
  voucher_id int [null]
  status varchar [not null, default: "pending", note: 'pending|confirmed|shipping|delivered|cancelled']
  shipping_method varchar [not null, default: "standard"]
  shipping_fee int [not null, default: 0]
  discount int [not null, default: 0]
  subtotal int [not null]
  total int [not null]
  receiver_name varchar [not null]
  receiver_phone varchar [not null]
  receiver_email varchar [not null]
  address_text text [not null]
  note text [null]
  payment_method varchar [not null, note: 'cod | qr']
  payment_status varchar [not null, default: "pending", note: 'pending|paid|failed|refunded']
  pay_code varchar [unique, null]
  pay_expires_at datetime [null, note: 'hạn QR (15 phút)']
  paid_at datetime [null]
  transaction_code varchar [null, note: 'mã giao dịch SePay/manual']
  ship_carrier varchar [null]
  tracking_code varchar [null]
  shipped_at datetime [null]
  delivered_at datetime [null]
  created_at datetime [not null, default: `now()`]
}

Table order_items {
  id int [pk, increment, not null]
  order_id varchar [not null]
  variant_id int [not null, note: 'biến thể đã bán — hoàn kho chính xác khi hủy']
  name varchar [not null, note: 'snapshot tên lúc mua']
  price int [not null, note: 'snapshot giá lúc mua']
  quantity int [not null]
  color varchar [not null]
  size varchar [not null]
  image text [not null]
}

Table vouchers {
  id int [pk, increment, not null]
  code varchar [unique, not null]
  type varchar [not null, note: 'percent | fixed | freeship']
  value int [not null]
  description varchar [not null]
  min_order int [not null, default: 0]
  expiry datetime [not null]
  usage_limit int [not null, default: 1000]
  used_count int [not null, default: 0]
}

Table reviews {
  id int [pk, increment, not null]
  user_id int [not null]
  variant_id int [not null, note: 'biến thể khách đánh giá (màu/size nào)']
  rating int [not null]
  title varchar [null]
  content text [not null]
  admin_reply text [null, note: 'phản hồi của shop']
  approved boolean [not null, default: false]
  created_at datetime [not null, default: `now()`]
}

Table notifications {
  id int [pk, increment, not null]
  user_id int [not null]
  order_id varchar [null]
  voucher_id int [null]
  title varchar [not null]
  content text [not null]
  type varchar [not null, default: "system", note: 'order | promo | system']
  read boolean [not null, default: false]
  created_at datetime [not null, default: `now()`]
}

Table banners {
  id int [pk, increment, not null]
  eyebrow varchar [not null]
  title varchar [not null]
  subtitle text [not null]
  image text [not null]
  cta varchar [not null, default: "Khám phá ngay"]
  active boolean [not null, default: true]
  sort_order int [not null, default: 0]
}

// ================== QUAN HỆ ==================
Ref: addresses.user_id > users.id
Ref: products.category_id > categories.id
Ref: product_images.product_id > products.id
Ref: variants.product_id > products.id
Ref: cart_items.user_id > users.id
Ref: cart_items.variant_id > variants.id
Ref: orders.user_id > users.id
Ref: orders.voucher_id > vouchers.id
Ref: order_items.order_id > orders.id
Ref: order_items.variant_id > variants.id
Ref: reviews.user_id > users.id
Ref: reviews.variant_id > variants.id
Ref: notifications.user_id > users.id
Ref: notifications.order_id > orders.id
Ref: notifications.voucher_id > vouchers.id

// ================== NHÓM BẢNG ==================
TableGroup nguoi_dung { // Người dùng
  users
  addresses
}
TableGroup san_pham { // Sản phẩm
  categories
  products
  product_images
  variants
}
TableGroup mua_sam { // Mua sắm
  cart_items
}
TableGroup don_hang { // Đơn hàng & Thanh toán (đã gộp payments)
  orders
  order_items
}
TableGroup khuyen_mai { // Khuyến mãi
  vouchers
}
TableGroup noi_dung { // Nội dung
  reviews
  notifications
  banners
}
